--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,8 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+tasks.withType(Test) {
+    scanForTestClasses = false
+    include "**/*Test.class" // whatever Ant pattern matches your test class files
+}
